roughly, it works fine

--- a/java-src/Makefile
+++ b/java-src/Makefile
@@ -1,11 +1,12 @@
 # Find with something like 'locate jni.h'
 JAVA_HOME=/usr/lib/jvm/java-12-openjdk
+CLASSPATH=/usr/share/clojure/libexec
 
 all: libhello.so
 
 # https://www3.ntu.edu.sg/home/ehchua/programming/java/JavaNativeInterface.html
 HelloJNI.h: HelloJNI.java
-	javac -h . HelloJNI.java
+	javac -cp "/usr/share/clojure/libexec/*:.:." -h . HelloJNI.java
 
 libhello.so: HelloJNI.h HelloJNI.c
 	$(CC) -fPIC -I"$(JAVA_HOME)/include" -I"$(JAVA_HOME)/include/linux" -shared -o libhello.so HelloJNI.c
